--- a/paper_3_annotations.Rmd
+++ b/paper_3_annotations.Rmd
@@ -4,6 +4,7 @@ author: "Danielle McCool"
 date: "`r Sys.Date()`"
 bibliography: paperpile_paper3.bib
 nocite: '@*'
+link-citations: true
 output:
   rmdformats::robobook:
     code_folding: show
@@ -52,7 +53,7 @@ source("json_parser.R")
 ```
 
 ```{r echo=FALSE, results='asis', warning=FALSE}
-json <- readJsonPaperpile(md = TRUE)
+json <- readJsonPaperpile(md = TRUE, bibloc = "paperpile_paper3.bib")
 layoutPapersInHTML(json)
 ```
 
